--- a/backend/k8s/deployment.yaml
+++ b/backend/k8s/deployment.yaml
@@ -24,7 +24,7 @@ spec:
           limits:
             cpu: "2"
             memory: "4Gi"
-            nvidia.com/gpu: 2
+            nvidia.com/gpu: "2"
           requests:
             cpu: "1"
             memory: "2Gi"
