--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,17 @@
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "react": "^19.1.0",
+    "axios": "^1.9.0",
+   "react-dropzone": "^14.3.8",
+
+    "lucide-react": "^0.511.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
+  },
+    "devDependencies": {
+    "@types/react-dropzone": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
